--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@sweetalert2/ngx-sweetalert2": "^12.0.2",
+    "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.11",
