--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@sweetalert2/ngx-sweetalert2": "^12.0.2",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.11",
