--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@sweetalert2/ngx-sweetalert2": "^12.0.2",
+    "express": "^4.18.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
+    "path": "^0.12.7",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.11",
@@ -41,5 +44,10 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
+  }
+  ,
+  "engines": {
+    "node": "12.18.2",
+    "npm": "6.14.5"
   }
 }
