--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build --prod"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -45,9 +44,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
   }
-  ,
-  "engines": {
-    "node": "12.18.2",
-    "npm": "6.14.5"
-  }
+
+  
 }
